--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -692,6 +692,9 @@ button.tm-more-button {
   .tm-popular-item-img{
     max-width: 285px;
   } 
+  .gold-text {
+    font-size: 24px; /* Adjust the font size as needed */
+  }
   .mobile-menu-icon {
     display: block;
     cursor: pointer;
